@@ -1,0 +1,8 @@
+{
+  "parent": "fruitsdelight:block/durian_small_base",
+  "render_type": "minecraft:cutout",
+  "textures": {
+    "side": "fruitsdelight:block/durian_side_small",
+    "top": "fruitsdelight:block/durian_top_small"
+  }
+}
