@@ -1,0 +1,277 @@
+{
+  "credit": "Made with Blockbench",
+  "parent": "block/block",
+  "textures": {
+	"2": "#side",
+	"3": "#top",
+	"particle": "#top"
+  },
+  "elements": [
+	{
+	  "from": [
+		3,
+		0,
+		3
+	  ],
+	  "to": [
+		13,
+		10,
+		13
+	  ],
+	  "faces": {
+		"up": {
+		  "uv": [
+			3,
+			3,
+			13,
+			13
+		  ],
+		  "texture": "#3",
+		  "cullface": "up"
+		},
+		"down": {
+		  "uv": [
+			3,
+			3,
+			13,
+			13
+		  ],
+		  "texture": "#3",
+		  "cullface": "down"
+		}
+	  }
+	},
+	{
+	  "from": [
+		3,
+		-1,
+		4
+	  ],
+	  "to": [
+		13,
+		11,
+		12
+	  ],
+	  "faces": {
+		"north": {
+		  "uv": [
+			3,
+			3,
+			13,
+			15
+		  ],
+		  "texture": "#2"
+		},
+		"south": {
+		  "uv": [
+			3,
+			3,
+			13,
+			15
+		  ],
+		  "texture": "#2"
+		}
+	  }
+	},
+	{
+	  "from": [
+		4,
+		-1,
+		3
+	  ],
+	  "to": [
+		12,
+		11,
+		13
+	  ],
+	  "rotation": {
+		"angle": 0,
+		"axis": "y",
+		"origin": [
+		  8,
+		  8,
+		  8
+		]
+	  },
+	  "faces": {
+		"east": {
+		  "uv": [
+			3,
+			3,
+			13,
+			15
+		  ],
+		  "texture": "#2"
+		},
+		"west": {
+		  "uv": [
+			3,
+			3,
+			13,
+			15
+		  ],
+		  "texture": "#2"
+		}
+	  }
+	},
+	{
+	  "from": [
+		7,
+		10,
+		7
+	  ],
+	  "to": [
+		9,
+		12,
+		9
+	  ],
+	  "faces": {
+		"north": {
+		  "uv": [
+			9,
+			2,
+			7,
+			4
+		  ],
+		  "texture": "#2"
+		},
+		"east": {
+		  "uv": [
+			7,
+			2,
+			9,
+			4
+		  ],
+		  "texture": "#2"
+		},
+		"south": {
+		  "uv": [
+			9,
+			2,
+			7,
+			4
+		  ],
+		  "texture": "#2"
+		},
+		"west": {
+		  "uv": [
+			7,
+			2,
+			9,
+			4
+		  ],
+		  "texture": "#2"
+		},
+		"up": {
+		  "uv": [
+			6,
+			12,
+			8,
+			14
+		  ],
+		  "texture": "#2"
+		},
+		"down": {
+		  "uv": [
+			0,
+			2,
+			2,
+			4
+		  ],
+		  "texture": "#2"
+		}
+	  }
+	}
+  ],
+  "display": {
+	"thirdperson_righthand": {
+	  "rotation": [
+		75,
+		45,
+		0
+	  ],
+	  "translation": [
+		0,
+		2.5,
+		0
+	  ],
+	  "scale": [
+		0.375,
+		0.375,
+		0.375
+	  ]
+	},
+	"thirdperson_lefthand": {
+	  "rotation": [
+		75,
+		45,
+		0
+	  ],
+	  "translation": [
+		0,
+		2.5,
+		0
+	  ],
+	  "scale": [
+		0.375,
+		0.375,
+		0.375
+	  ]
+	},
+	"firstperson_righthand": {
+	  "rotation": [
+		0,
+		45,
+		0
+	  ],
+	  "scale": [
+		0.4,
+		0.4,
+		0.4
+	  ]
+	},
+	"firstperson_lefthand": {
+	  "rotation": [
+		0,
+		225,
+		0
+	  ],
+	  "scale": [
+		0.4,
+		0.4,
+		0.4
+	  ]
+	},
+	"ground": {
+	  "translation": [
+		0,
+		3,
+		0
+	  ],
+	  "scale": [
+		0.25,
+		0.25,
+		0.25
+	  ]
+	},
+	"gui": {
+	  "rotation": [
+		30,
+		225,
+		0
+	  ],
+	  "scale": [
+		0.625,
+		0.625,
+		0.625
+	  ]
+	},
+	"fixed": {
+	  "scale": [
+		0.5,
+		0.5,
+		0.5
+	  ]
+	}
+  }
+}
